--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="The Magician – Salon de coiffure premium à Verviers. Réservez votre rituel capillaire." />
   <meta name="theme-color" content="#d4af37" />
   <title>The Magician – Salon de coiffure premium</title>
-  <link rel="stylesheet" href="style-new.css" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -317,6 +317,6 @@
     </div>
   </div>
 
-  <script src="main-new.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
