--- a/index.html
+++ b/index.html
@@ -371,11 +371,11 @@
         <button id="admin-close" class="btn-close">✕</button>
       </div>
       <nav class="admin-nav">
-        <button class="admin-nav-btn active" data-tab="dashboard">📊 Tableau de bord</button>
-        <button class="admin-nav-btn" data-tab="reservations">📅 Réservations</button>
-        <button class="admin-nav-btn" data-tab="blocked">🚫 Créneaux bloqués</button>
-        <button class="admin-nav-btn" data-tab="announcements">📢 Annonces</button>
-        <button class="admin-nav-btn" data-tab="settings">⚙️ Paramètres</button>
+        <button class="admin-nav-btn active" data-tab="dashboard">Tableau de bord</button>
+        <button class="admin-nav-btn" data-tab="reservations">Réservations</button>
+        <button class="admin-nav-btn" data-tab="blocked">Créneaux bloqués</button>
+        <button class="admin-nav-btn" data-tab="announcements">Annonces</button>
+        <button class="admin-nav-btn" data-tab="settings">Paramètres</button>
         <button id="admin-logout" class="btn-logout">Déconnexion</button>
       </nav>
     </div>
