--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </div>
       <ul class="navbar-menu">
         <li><a href="#services">Services</a></li>
+        <li><a href="#offers">Offres</a></li>
         <li><a href="#team">Équipe</a></li>
         <li><a href="#booking">Réserver</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -41,8 +42,39 @@
     <div class="hero-overlay"></div>
     <div class="hero-content">
       <h2 class="hero-title">Révélez la magie de votre style</h2>
-      <p class="hero-subtitle">Salon de coiffure premium à Verviers • Coupes • Barbe • Soins</p>
-      <a href="#booking" class="btn-primary">Réserver maintenant</a>
+      <p class="hero-subtitle">Salon de coiffure haut de gamme à Verviers. Une expérience sur-mesure pour chaque détail.</p>
+      <div class="hero-actions">
+        <a href="#booking" class="btn-primary">Réserver un rendez-vous</a>
+        <a href="#services" class="btn-secondary">Découvrir les services</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Offers Section -->
+  <section id="offers" class="offers">
+    <div class="container">
+      <h2 class="section-title">Offres & Annonces</h2>
+      <p class="section-subtitle">Découvrez les mises à jour du salon, les fermetures exceptionnelles et les rituels signature du moment.</p>
+
+      <div class="offers-grid">
+        <article class="offer-card">
+          <h3>Rituels Signature</h3>
+          <p>Combinaisons coupe, barbe et soin visage pensées pour une transformation complète.</p>
+          <span class="offer-tag">Expérience</span>
+        </article>
+
+        <article class="offer-card">
+          <h3>Créneaux Privilège</h3>
+          <p>Réservations sur les horaires les plus demandés, avec confirmation rapide par l'équipe.</p>
+          <span class="offer-tag">Disponibilités</span>
+        </article>
+
+        <article class="offer-card">
+          <h3>Annonces du Salon</h3>
+          <p>Fermetures spéciales, événements et actualités sont affichés automatiquement en haut du site.</p>
+          <span class="offer-tag">Infos</span>
+        </article>
+      </div>
     </div>
   </section>
 
@@ -53,7 +85,7 @@
       <div class="services-grid">
         <div class="service-card">
           <div class="service-image">
-            <img src="https://images.unsplash.com/photo-1599351431202-924373718618?auto=format&fit=crop&w=400&q=80" alt="Coupes" />
+            <img src="https://cdn.discordapp.com/attachments/1433594938729431185/1440365308064829490/LmpwZw.png?ex=691de43a&is=691c92ba&hm=a9bb803489ecba7e434b9e2cb3812430df1848484143c8a7fae6f6f57382c2e4&" alt="Coupes" />
           </div>
           <div class="service-content">
             <h3>Coupes</h3>
@@ -68,7 +100,7 @@
 
         <div class="service-card">
           <div class="service-image">
-            <img src="https://images.unsplash.com/photo-1621905167918-48416bd8575a?auto=format&fit=crop&w=400&q=80" alt="Barbe" />
+            <img src="https://cdn.discordapp.com/attachments/1433594938729431185/1440366048460279981/dGUlQ0MlODEuanBn.png?ex=691de4ea&is=691c936a&hm=b379af6f36dcc74b008e5ff041ef75edb960f4c097e61469b3b374acfbff7e0c&" alt="Barbe" />
           </div>
           <div class="service-content">
             <h3>Barbe</h3>
@@ -83,7 +115,7 @@
 
         <div class="service-card">
           <div class="service-image">
-            <img src="https://images.unsplash.com/photo-1596728147701-392d4127585d?auto=format&fit=crop&w=400&q=80" alt="Soins" />
+            <img src="https://cdn.discordapp.com/attachments/1433594938729431185/1440366352295530567/anBn.png?ex=691de533&is=691c93b3&hm=aada4eeaa366e4c10d28edec251356810eedfb839658c249def347e595d9ecf7&" alt="Soins" />
           </div>
           <div class="service-content">
             <h3>Soins Premium</h3>
@@ -108,7 +140,7 @@
           <div class="team-image">
             <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?auto=format&fit=crop&w=300&q=80" alt="Malik" />
             <div class="team-overlay">
-              <p>Spécialiste coupes & barbe</p>
+              <p>Spécialiste coupes & barbeoui</p>
             </div>
           </div>
           <h3>Malik</h3>
