--- a/index.html
+++ b/index.html
@@ -150,21 +150,21 @@
 
         <div class="team-card">
           <div class="team-image">
-            <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?auto=format&fit=crop&w=300&q=80" alt="Élodie" />
+            <img src="https://cdn.discordapp.com/attachments/1433594938729431185/1441171222036615330/VzVKazdoRWMwPQ.png?ex=6920d2cb&is=691f814b&hm=f7c7cb8ba295f6244ed2f5dae7c58f2cf406abde972c519e7d35992f4e7d2185&" alt="Élodie" />
             <div class="team-overlay">
               <p>Experte couleur & soins</p>
             </div>
           </div>
-          <h3>Élodie</h3>
+          <h3>Frédéric</h3>
           <p class="role">Color Enchanteresse</p>
           <p class="specialty">Balayage • Corrections • Soins capillaires premium</p>
         </div>
 
         <div class="team-card">
           <div class="team-image">
-            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?auto=format&fit=crop&w=300&q=80" alt="Lucia" />
+            <img src="https://cdn.discordapp.com/attachments/1433594938729431185/1441171222036615330/VzVKazdoRWMwPQ.png?ex=6920d2cb&is=691f814b&hm=f7c7cb8ba295f6244ed2f5dae7c58f2cf406abde972c519e7d35992f4e7d2185&" alt="Lucia" />
             <div class="team-overlay">
-              <p>Architecte du volume</p>
+              <p>Architecte du volume.</p>
             </div>
           </div>
           <h3>Lucia</h3>
