--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <p>Experte couleur & soins</p>
             </div>
           </div>
-          <h3>Frédéric</h3>
+          <h3>Elodie</h3>
           <p class="role">Color Enchanteresse</p>
           <p class="specialty">Balayage • Corrections • Soins capillaires premium</p>
         </div>
@@ -315,7 +315,7 @@
               <span class="info-icon">📱</span>
               <div>
                 <strong>Instagram</strong>
-                <p><a href="https://instagram.com/the_magician_barber" target="_blank">@the_magician_barber</a></p>
+                <p><a href="https://instagram.com/" target="_blank">@the_magician_barber</a></p>
               </div>
             </div>
 
@@ -371,7 +371,7 @@
         <div class="contact-item">
           <div class="contact-icon">📱</div>
           <h3>Instagram</h3>
-          <p><a href="https://instagram.com/the_magician_barber" target="_blank">@the_magician_barber</a></p>
+          <p><a href="https://instagram.com/" target="_blank">@the_magician_barber</a></p>
         </div>
       </div>
     </div>
